@@ -138,7 +138,7 @@ BEGIN
     EDITTEXT        IDC_EMAIL,94,34,164,14,ES_AUTOHSCROLL
     RTEXT           "Description",IDC_SETTINGS_DESCRIPTION,14,54,74,8
     EDITTEXT        IDC_DESCRIPTION,94,51,164,14,ES_AUTOHSCROLL
-    RTEXT           "Max upload speed",IDC_SETTINGS_UPLOAD_SPEED,14,70,74,8
+    RTEXT           "Line speed (upload)",IDC_SETTINGS_UPLOAD_LINE_SPEED,14,70,74,8
     COMBOBOX        IDC_CONNECTION,94,68,58,95,CBS_DROPDOWNLIST | 
                     CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
     LTEXT           "idc_settings_mebibits",IDC_SETTINGS_MEBIBITS,156,71,102,
