@@ -494,7 +494,7 @@ string ResourceManager::strings[] = {
 "Toggle window when selecting an active tab", 
 "UDP Port", 
 "Unfinished downloads directory", 
-"Max upload speed", 
+"Line speed (upload)", 
 "Sharing", 
 "Automatically open an extra slot if speed is below (0 = disable)", 
 "Upload slots", 
@@ -1088,7 +1088,7 @@ string ResourceManager::names[] = {
 "SettingsToggleActiveWindow", 
 "SettingsUdpPort", 
 "SettingsUnfinishedDownloadDirectory", 
-"SettingsUploadSpeed", 
+"SettingsUploadLineSpeed", 
 "SettingsUploads", 
 "SettingsUploadsMinSpeed", 
 "SettingsUploadsSlots", 
