@@ -185,7 +185,6 @@ void UserConnection::connect(const string& aServer, short aPort) throw(SocketExc
 
 void UserConnection::accept(const Socket& aServer) throw(SocketException, ThreadException) {
 	dcassert(!socket);
-
 	socket = BufferedSocket::getSocket(0);
 	socket->addListener(this);
 	socket->accept(aServer, secure);
@@ -208,5 +207,5 @@ void UserConnection::on(BufferedSocketListener::Failed, const string& aLine) thr
 
 /**
  * @file
- * $Id: UserConnection.cpp,v 1.55 2006/01/23 08:00:49 arnetheduck Exp $
+ * $Id: UserConnection.cpp,v 1.56 2006/02/05 13:38:44 arnetheduck Exp $
  */
